--- a/src/app/components/clients/date-picker/date-picker.component.scss
+++ b/src/app/components/clients/date-picker/date-picker.component.scss
@@ -1,22 +1,22 @@
 .calendar-wrapper {
     position: relative;
-    // width: 5.5rem;
+    min-width: 150px;
 
-    .dateInput {
-        border-color: var(--color-secondary);
-        outline: none;
-        border: 1px solid var(--color-primary);
-        border-radius: .3rem;
-        height: 2.5rem;
-        width: 5.5rem;
-        color: var(--color-primary);
-        text-align: center;
-        cursor: pointer;
-        font-size: 16px;
+    input {
+        display: none;
     }
 
-    .dateInput::placeholder {
-        text-align: center;
+    .select-button {
+        cursor: pointer;
+        user-select: none;
+        padding: 8px 12px;
+        border: 1px solid var(--color-primary);
+        border-radius: 4px;
+        background-color: var(--color-light);
+        display: flex;
+        justify-content: space-between;
+        column-gap: .75rem;
+        align-items: center;
         color: var(--color-primary);
     }
 
@@ -31,6 +31,7 @@
         padding: .5rem;
         overflow: hidden;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        z-index: 1;
     }
 
     .calendar-header {
