--- a/src/app/components/clients/filter-bar/filter-bar.component.scss
+++ b/src/app/components/clients/filter-bar/filter-bar.component.scss
@@ -1,3 +1,6 @@
+@import 'filter-left';
+@import 'filter-right';
+
 .layout-filter {
     margin-top: 5.57rem;
 
@@ -6,151 +9,10 @@
         margin: 0 auto;
 
         .filter-content {
-            padding: 2.5rem 4rem;
-            display: grid;
-            grid-template-columns: repeat(12, 1fr);
-            grid-column: .5rem;
+            padding: 2.5rem 2.5rem;
+            display: flex;
+            justify-content: space-between;
 
-            .filter-left {
-                // background-color: aqua;
-                grid-column: span 9;
-
-                .filter-param {
-                    display: flex;
-                    justify-content: flex-start;
-                    column-gap: .5rem;
-
-                    .filter-tl {
-                        #thoi-lg {
-                            position: absolute;
-                            transform: translate(-50%, -50%);
-                            top: 50%;
-                            left: 50%;
-                            -webkit-appearance: none;
-                            -moz-appearance: none;
-                            appearance: none;
-                            width: 100px;
-                            padding: 10px 20px;
-                            font-weight: 600;
-                            font-size: 20px;
-                            letter-spacing: 0.5px;
-                            cursor: pointer;
-                            background-color: var(--color-bg-body);
-                            color: var(--color-primary);
-                            border: 2px solid var(--color-primary);
-                            border-radius: 5px;
-                            outline: none;
-
-                            option {
-                                color: #333;
-                                border: none;
-                                padding: 5px 10px;
-                                font-size: 14px;
-                            }
-
-                            option:hover {
-                                background-color: rgb(246, 246, 246);
-                            }
-                        }
-
-                        select::-ms-expand {
-                            display: none;
-                        }
-
-                        select:hover {
-                            border: 6px solid #ff66a3;
-                        }
-
-                        #thoi-lg::-webkit-scrollbar {
-                            width: .2rem;
-                        }
-
-                        #thoi-lg::-webkit-scrollbar-thumb {
-                            background-color: rgb(240, 240, 240);
-                            border-radius: 5px;
-                        }
-
-                    }
-                }
-            }
-
-            .filter-right {
-                grid-column: span 3;
-
-                .filter-sort {
-                    display: flex;
-                    justify-content: flex-end;
-
-                    .sort-tilte {
-                        margin-right: 1rem;
-                        color: var(--color-primary);
-                    }
-
-                    .sort-content {
-                        position: relative;
-
-                        .sort-text {
-                            min-width: 200px;
-                            font-weight: bold;
-                            color: var(--color-primary);
-
-                        }
-
-                        .sort-menu {
-                            position: absolute;
-                            top: 100%;
-                            right: 10%;
-                            min-width: 13rem;
-                            background-color: var(--color-bg-body);
-                            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-                            border-radius: .3rem;
-                            padding: .5rem 0;
-
-                            .sort-item {
-                                list-style: none;
-                                display: block;
-                                padding-left: 1rem;
-
-                                .sort-link {
-                                    color: var(--color-primary);
-                                    display: block;
-                                    text-decoration: none;
-                                    text-align: center;
-                                    line-height: 2.5rem;
-                                    display: flex;
-                                    flex-wrap: nowrap;
-                                    align-items: center;
-
-                                    .sort-icon-checked {
-                                        margin-bottom: 3px;
-                                        margin-right: .5rem;
-                                        display: none;
-                                    }
-
-                                    .sort-icon-unchecked {
-                                        margin-bottom: 3px;
-                                        margin-right: .5rem;
-                                    }
-                                }
-
-                                .sort-default {
-                                    .sort-icon-checked {
-                                        display: block;
-                                    }
-
-                                    .sort-icon-unchecked {
-                                        display: none;
-                                    }
-                                }
-                            }
-
-                            .sort-item:hover {
-                                background-color: rgb(246, 246, 246);
-                            }
-                        }
-                    }
-                }
-            }
         }
     }
 }
@@ -158,5 +20,15 @@
 @media(min-width:1400px) {
     .filter-container {
         max-width: 1440px;
+    }
+}
+
+@media(max-width:991.98px) {
+    .layout-filter {
+        .filter-container {
+            .filter-content {
+                flex-direction: column;
+            }
+        }
     }
 }
