--- a/src/app/components/clients/header/header-content-mobile.scss
+++ b/src/app/components/clients/header/header-content-mobile.scss
@@ -7,119 +7,179 @@
     background-color: var(--color-bg-body);
     display: none;
     padding-bottom: 2.5rem;
-    overflow-y: auto;
     z-index: 1080;
 
-    .brand-mobile {
-        padding-top: .5rem;
-        position: sticky;
-        top: 0;
-        left: 0;
-        right: 0;
-        margin-bottom: 1.5rem;
-        background-color: var(--color-bg-body);
+    .header-mobile-inner {
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
 
-        .brand-logo-mobile {
-            display: flex;
-            justify-content: center;
+        .brand-mobile {
+            padding-top: .5rem;
+            position: sticky;
+            top: 0;
+            left: 0;
+            right: 0;
+            margin-bottom: 1.5rem;
+            background-color: var(--color-bg-body);
 
-            .brand-image-mobile {
-                width: 5rem;
-                height: 5rem;
-                object-fit: cover;
+            .brand-logo-mobile {
+                display: flex;
+                justify-content: center;
+
+                .brand-image-mobile {
+                    width: 5rem;
+                    height: 5rem;
+                    object-fit: cover;
+                }
             }
         }
-    }
 
-    .menu-container-mobile {
-        margin-bottom: 2rem;
-        min-height: calc(100vh - 17.5rem);
+        .menu-container-mobile {
+            margin-bottom: 2rem;
+            min-height: calc(100vh - 17.5rem);
 
-        .menu-item {
-            padding-left: 1.5rem;
-            display: block;
-            list-style: none;
-
-            .menu-link {
-                line-height: 2.5rem;
-                width: 100%;
+            .menu-item {
                 display: block;
-                text-decoration: none;
-                color: var(--color-primary);
-                font-size: 18px;
+                list-style: none;
+
+                .menu-link {
+                    padding-left: 1.5rem;
+                    line-height: 2.5rem;
+                    width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    column-gap: .5rem;
+                    text-decoration: none;
+                    color: var(--color-primary);
+                    font-size: 18px;
+                    padding-right: 1.5rem;
+                }
+
+                .menu-dropdown {
+                    display: none;
+                    margin: 0;
+                    padding: 0;
+
+                    .menu-dropdown-item {
+                        list-style: none;
+
+                        .menu-dropdown-link {
+                            padding-left: 2.25rem;
+                            color: var(--color-primary);
+                            line-height: 2.5rem;
+                            width: 100%;
+                            display: block;
+                            text-decoration: none;
+                            font-size: 17px;
+
+                        }
+                    }
+                }
+
+                .menu-dropdown.show {
+                    display: block !important;
+                }
             }
 
-            .menu-dropdown {
-                display: none;
-                margin: 0;
-                padding: 0;
+            .menu-item:hover {
+                background-color: rgb(245, 245, 245);
 
-                .menu-dropdown-item {
-                    list-style: none;
-                    padding-left: .75rem;
+                .menu-dropdown {
+                    background-color: var(--color-bg-body);
 
-                    .menu-dropdown-link {
-                        color: var(--color-primary);
-                        line-height: 2.5rem;
-                        width: 100%;
-                        display: block;
-                        text-decoration: none;
-                        font-size: 17px;
-
+                    .menu-dropdown-item:hover {
+                        background-color: rgb(245, 245, 245);
                     }
                 }
             }
 
-            .menu-dropdown.show {
-                display: block !important;
+            .menu-item.active {
+                background-color: rgb(245, 245, 245);
+
+                .menu-dropdown {
+                    background-color: var(--color-bg-body);
+                }
             }
         }
 
-        .menu-item:hover {
-            background-color: rgb(245, 245, 245);
+        .control-mobile {
+            padding: 0 1.5rem;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            column-gap: .5rem;
+
+            .control-item {
+                grid-column: span 1;
+                list-style: none;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+
+                .control-link {
+                    position: relative;
+                    line-height: 2.5rem;
+                    /*width: 100%;*/
+                    display: block;
+                    text-align: center;
+                    text-decoration: none;
+                    color: var(--color-primary);
+                    font-size: 18px;
+                }
+
+                .control-link::after {
+                    content: "";
+                    position: absolute;
+                    width: 100%;
+                    height: 1.5px;
+                    background-color: var(--color-primary);
+                    bottom: .3rem;
+                    left: 0;
+                    transform: scaleX(0);
+                    transform-origin: left;
+                    transition: transform 0.3s ease;
+                }
+
+                .control-link:hover::after {
+                    transform: scaleX(1);
+                }
+
+            }
+
+            .item-col {
+                justify-content: flex-start;
+                grid-column: span 2;
+            }
         }
-    }
 
-    .control-mobile {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: .5rem;
+        .close-menu {
+            position: absolute;
+            width: 2.25rem;
+            height: 2.25rem;
+            top: 10px;
+            right: 10px;
+            border-radius: 50%;
+            background-color: rgb(246, 246, 246);
 
-        .control-item {
-            grid-column: span 1;
-            list-style: none;
-            display: block;
-
-            .control-link {
-                line-height: 2.5rem;
-                width: 100%;
-                display: block;
-                text-align: center;
-                text-decoration: none;
+            .close-menu-icon {
+                padding-top: 2px;
                 color: var(--color-primary);
-                font-size: 18px;
+                text-decoration: none;
+                font-size: 28px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding-top: 4px;
             }
         }
 
-        .item-col {
-            grid-column: span 2;
+        .close-menu:hover {
+            background-color: rgb(240, 240, 240);
+            transform: rotate(22.5deg);
+            /* Xoay phần tử 45 độ khi hover */
+
         }
-    }
-
-    .close-menu-icon {
-        position: absolute;
-        width: 2.25rem;
-        height: 2.25rem;
-        top: 4rem;
-        right: -1.1rem;
-        padding-top: 2px;
-        background-color: var(--color-primary);
-        border-radius: 50%;
-        color: var(--color-light);
-        text-decoration: none;
-        font-size: 28px;
-        text-align: left;
-
     }
 }
 
