--- a/src/app/components/clients/header/header-content.scss
+++ b/src/app/components/clients/header/header-content.scss
@@ -44,6 +44,7 @@
                     border-radius: .3rem;
                     color: var(--color-text-body);
                     padding-left: 1.25rem;
+                    padding-right: 2.75rem;
                 }
 
                 #search-input::placeholder {
@@ -52,7 +53,7 @@
 
                 #search-icon {
                     position: absolute;
-                    right: 0;
+                    right: 1rem;
                     top: 50%;
                     transform: translateY(-50%);
                     color: var(--color-text-body);
@@ -62,9 +63,7 @@
                     text-decoration: none;
                     font-weight: bold;
                     font-size: 26px;
-                    height: 3rem;
-                    width: 3rem;
-                    background-color: rgb(240, 240, 240);
+
                     border-radius: .3rem;
                     padding-top: 2px;
                 }
@@ -94,10 +93,34 @@
             padding: 0 1rem;
 
             .cright-link {
+                position: relative;
                 text-decoration: none;
                 color: var(--color-text-body);
                 font-size: 18px;
             }
+
+            .cright-link:hover {
+                font-size: 600;
+                color: var(--color-primary);
+            }
+
+            .cright-link::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 1.5px;
+                background-color: var(--color-primary);
+                bottom: -.3rem;
+                left: 0;
+                transform: scaleX(0);
+                transform-origin: left;
+                transition: transform 0.3s ease;
+            }
+
+            .cright-link:hover::after {
+                transform: scaleX(1);
+            }
+
         }
     }
 
@@ -181,14 +204,10 @@
 
         .search-suggest-mobile {
             position: absolute;
-            width: 100%;
+            width: 100vw;
             height: 100vh;
             background-color: var(--color-light);
         }
-    }
-
-    .search-mobile.show {
-        display: block !important;
     }
 
 }
@@ -223,6 +242,11 @@
         .search-bar,
         .header-content-right {
             display: none !important;
+        }
+
+
+        .search-mobile.show {
+            display: block !important;
         }
 
         .icon-toggle-bar {
