--- a/src/app/components/clients/home/category.scss
+++ b/src/app/components/clients/home/category.scss
@@ -12,6 +12,10 @@
         grid-auto-rows: 1fr;
         column-gap: 2rem;
 
+        a {
+            color: var(--color-text-body)
+        }
+
         .cate-content {
             position: relative;
             margin-bottom: 2rem;
