--- a/src/app/components/clients/home/home.component.html
+++ b/src/app/components/clients/home/home.component.html
@@ -60,115 +60,121 @@
             <h2 class="ppopular-title">Nhiếp ảnh gia phổ biến</h2>
             <div class="ppopular-wrapper">
                 <div class="ppopular-content ">
-                    <div class="pp-picture">
-                        <div class="picture-1">
-                            <img src="./assets/images/user/Rectangle 16-2.png" alt="">
-                        </div>
-                        <div class="picture-right">
-                            <div class="picture-2">
-                                <img src="./assets/images/user/Rectangle 17-2.png" alt="">
+                    <a routerLink="/profile">
+                        <div class="pp-picture">
+                            <div class="picture-1">
+                                <img src="./assets/images/user/Rectangle 16-2.png" alt="">
                             </div>
-                            <div class="picture-3">
-                                <img src="./assets/images/user/Rectangle 18-2.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pp-info">
-                        <div class="info-left">
-                            <h4 class="info-title">Phạm Việt Cường</h4>
-                            <span class="info-address">Ba Đình, Hà Nội</span>
-                        </div>
-                        <div class="info-right">
-                            <p class="info-price">300,000/h</p>
-                            <div class="info-rate">
-                                <div class="rate-star">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
+                            <div class="picture-right">
+                                <div class="picture-2">
+                                    <img src="./assets/images/user/Rectangle 17-2.png" alt="">
                                 </div>
-                                <span class="rate-text">5.0</span>
+                                <div class="picture-3">
+                                    <img src="./assets/images/user/Rectangle 18-2.png" alt="">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="pp-avatar">
-                        <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
-                    </div>
+                        <div class="pp-info">
+                            <div class="info-left">
+                                <h4 class="info-title">Phạm Việt Cường</h4>
+                                <span class="info-address">Ba Đình, Hà Nội</span>
+                            </div>
+                            <div class="info-right">
+                                <p class="info-price">300,000/h</p>
+                                <div class="info-rate">
+                                    <div class="rate-star">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                    </div>
+                                    <span class="rate-text">5.0</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pp-avatar">
+                            <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
+                        </div>
+                    </a>
                 </div>
                 <div class="ppopular-content ">
-                    <div class="pp-picture">
-                        <div class="picture-1">
-                            <img src="./assets/images/user/Rectangle 16-2.png" alt="">
-                        </div>
-                        <div class="picture-right">
-                            <div class="picture-2">
-                                <img src="./assets/images/user/Rectangle 17-2.png" alt="">
+                    <a routerLink="/profile">
+                        <div class="pp-picture">
+                            <div class="picture-1">
+                                <img src="./assets/images/user/Rectangle 16-1.png" alt="">
                             </div>
-                            <div class="picture-3">
-                                <img src="./assets/images/user/Rectangle 18-2.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pp-info">
-                        <div class="info-left">
-                            <h4 class="info-title">Phạm Việt Cường</h4>
-                            <span class="info-address">Ba Đình, Hà Nội</span>
-                        </div>
-                        <div class="info-right">
-                            <p class="info-price">300,000/h</p>
-                            <div class="info-rate">
-                                <div class="rate-star">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
+                            <div class="picture-right">
+                                <div class="picture-2">
+                                    <img src="./assets/images/user/Rectangle 17-1.png" alt="">
                                 </div>
-                                <span class="rate-text">5.0</span>
+                                <div class="picture-3">
+                                    <img src="./assets/images/user/Rectangle 18-1.png" alt="">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="pp-avatar">
-                        <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
-                    </div>
+                        <div class="pp-info">
+                            <div class="info-left">
+                                <h4 class="info-title">Lê Đức Chinh</h4>
+                                <span class="info-address">Tây Hồ, Hà Nội</span>
+                            </div>
+                            <div class="info-right">
+                                <p class="info-price">350,000/h</p>
+                                <div class="info-rate">
+                                    <div class="rate-star">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                    </div>
+                                    <span class="rate-text">5.0</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pp-avatar">
+                            <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
+                        </div>
+                    </a>
                 </div>
                 <div class="ppopular-content">
-                    <div class="pp-picture">
-                        <div class="picture-1">
-                            <img src="./assets/images/user/Rectangle 16-2.png" alt="">
-                        </div>
-                        <div class="picture-right">
-                            <div class="picture-2">
-                                <img src="./assets/images/user/Rectangle 17-2.png" alt="">
+                    <a routerLink="/profile">
+                        <div class="pp-picture">
+                            <div class="picture-1">
+                                <img src="./assets/images/user/Rectangle 16.png" alt="">
                             </div>
-                            <div class="picture-3">
-                                <img src="./assets/images/user/Rectangle 18-2.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pp-info">
-                        <div class="info-left">
-                            <h4 class="info-title">Phạm Việt Cường</h4>
-                            <span class="info-address">Ba Đình, Hà Nội</span>
-                        </div>
-                        <div class="info-right">
-                            <p class="info-price">300,000/h</p>
-                            <div class="info-rate">
-                                <div class="rate-star">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
-                                    <img src="./assets/images/icons/star-fill.png" alt="">
+                            <div class="picture-right">
+                                <div class="picture-2">
+                                    <img src="./assets/images/user/Rectangle 17.png" alt="">
                                 </div>
-                                <span class="rate-text">5.0</span>
+                                <div class="picture-3">
+                                    <img src="./assets/images/user/Rectangle 18.png" alt="">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="pp-avatar">
-                        <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
-                    </div>
+                        <div class="pp-info">
+                            <div class="info-left">
+                                <h4 class="info-title">Dương Tùng Vương</h4>
+                                <span class="info-address">Quận 1, Hồ Chí Minh</span>
+                            </div>
+                            <div class="info-right">
+                                <p class="info-price">500,000/h</p>
+                                <div class="info-rate">
+                                    <div class="rate-star">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                        <img src="./assets/images/icons/star-fill.png" alt="">
+                                    </div>
+                                    <span class="rate-text">5.0</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pp-avatar">
+                            <img src="./assets/images/avatar/avatar1.jpeg" alt="avatar">
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="ppopular-detail">
@@ -181,52 +187,60 @@
             <h2 class="category-title">Thể loại</h2>
             <div class="cate-content-wrapper">
                 <div class="cate-content">
-                    <div class="cate-picture">
-                        <div class="picture-wrapper">
-                            <img src="./assets/images/user/Rectangle 23.png" alt="">
+                    <a routerLink="/collection">
+                        <div class="cate-picture">
+                            <div class="picture-wrapper">
+                                <img src="./assets/images/user/Rectangle 23.png" alt="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="cate-name">
-                        <div class="text-name">
-                            <h4>Du lịch</h4>
+                        <div class="cate-name">
+                            <div class="text-name">
+                                <h4>Du lịch</h4>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="cate-content">
-                    <div class="cate-picture">
-                        <div class="picture-wrapper">
-                            <img src="./assets/images/user/Rectangle 24.png" alt="">
+                    <a routerLink="/collection">
+                        <div class="cate-picture">
+                            <div class="picture-wrapper">
+                                <img src="./assets/images/user/Rectangle 24.png" alt="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="cate-name">
-                        <div class="text-name">
-                            <h4>LookBook</h4>
+                        <div class="cate-name">
+                            <div class="text-name">
+                                <h4>LookBook</h4>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="cate-content">
-                    <div class="cate-picture">
-                        <div class="picture-wrapper">
-                            <img src="./assets/images/user/Rectangle 25.png" alt="">
+                    <a routerLink="/collection">
+                        <div class="cate-picture">
+                            <div class="picture-wrapper">
+                                <img src="./assets/images/user/Rectangle 25.png" alt="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="cate-name">
-                        <div class="text-name">
-                            <h4>Catalogue</h4>
+                        <div class="cate-name">
+                            <div class="text-name">
+                                <h4>Catalogue</h4>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="cate-content">
-                    <div class="cate-picture">
-                        <div class="picture-wrapper">
-                            <img src="./assets/images/user/Rectangle 26.png" alt="">
+                    <a routerLink="/collection">
+                        <div class="cate-picture">
+                            <div class="picture-wrapper">
+                                <img src="./assets/images/user/Rectangle 26.png" alt="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="cate-name">
-                        <div class="text-name">
-                            <h4>Khác</h4>
+                        <div class="cate-name">
+                            <div class="text-name">
+                                <h4>Khác</h4>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
 
@@ -244,8 +258,8 @@
                                 Tìm kiếm nhiếp ảnh gia
                             </h4>
                             <div class="des-atten-text">
-                                Tìm kiếm những nhiếp ảnh gia xung quanh khu vực bạn
-                                với giá cả hợp lý
+                                Tìm kiếm những nhiếp ảnh gia xung quanh khu vực bạn với giá cả hợp lý, phù hợp với nhu
+                                cầu của bạn. Tham khảo hồ sơ và thêm ngay các nhiếp ảnh gia vào danh mục yêu thích.
                             </div>
                         </div>
                         <div class="des-attention">
@@ -254,8 +268,8 @@
                                 Đặt lịch hẹn
                             </h4>
                             <div class="des-atten-text">
-                                Tìm kiếm những nhiếp ảnh gia xung quanh khu vực bạn
-                                với giá cả hợp lý
+                                Sau khi lựa chọn xong nhiếp ảnh gia phù hợp, nhanh chóng đặt lịch chỉ bằng vài thao tác
+                                chuột. Nhiếp ảnh gia sẽ xác nhận và cùng chờ đợi đến ngày chụp ảnh.
                             </div>
                         </div>
                         <div class="des-attention">
@@ -264,8 +278,8 @@
                                 Chia sẻ khoảnh khắc tuyệt vời của bạn
                             </h4>
                             <div class="des-atten-text">
-                                Tìm kiếm những nhiếp ảnh gia xung quanh khu vực bạn
-                                với giá cả hợp lý
+                                Hãy giữ liên lạc với nhiếp ảnh gia của bạn trong và sau khi nhận booking. Sau ngày chụp
+                                ảnh, bạn có thể lựa chọn và chia sẻ các bức hình đẹp mà nhiếp ảnh gia đã chụp và xử lý.
                             </div>
                         </div>
                     </div>
