--- a/src/app/components/clients/home/photo-popular.scss
+++ b/src/app/components/clients/home/photo-popular.scss
@@ -18,6 +18,10 @@
             border-radius: .3rem;
             margin-bottom: 2rem;
 
+            a {
+                color: var(--color-text-body)
+            }
+
             .pp-picture {
                 height: 100%;
                 display: flex;
@@ -194,7 +198,7 @@
 
 @media(min-width:1200px) {}
 
-@media(max-width:991.98px) {
+@media(max-width:1100px) {
 
     .photo-popular-wrapper {
         .ppopular-wrapper {
