--- a/src/app/components/clients/layout-auth/layout-auth.component.scss
+++ b/src/app/components/clients/layout-auth/layout-auth.component.scss
@@ -5,7 +5,7 @@
     .auth-wrapper {
         width: 100%;
         min-height: 100%;
-        background-image: url('/src/assets/images/banner.jpg');
+        background-image: url('/assets/images/banner.jpg');
         background-size: cover;
         background-repeat: repeat;
         background-position: center;
