--- a/src/app/components/clients/menu/menu.component.html
+++ b/src/app/components/clients/menu/menu.component.html
@@ -1,25 +1,31 @@
 <div class="layout-menu">
     <div class="menu-container">
         <li class="menu-item dropdown">
-            <a routerLink="" class="menu-link">Du lịch</a>
+            <a routerLink="/collection" class="menu-link">Du lịch
+                <i class='bx bx-collapse-vertical icon-collapse'></i>
+                <i class='bx bx-expand-vertical icon-expand'></i>
+            </a>
             <ul class="dropdown-menu">
-                <li class="dropdown-item"><a routerLink="" class="dropdown-link">Chân dung</a></li>
-                <li class="dropdown-item"><a routerLink="" class="dropdown-link">Thể thao</a></li>
-                <li class="dropdown-item"><a routerLink="" class="dropdown-link">Đường phố</a></li>
-                <li class="dropdown-item"><a routerLink="" class="dropdown-link">Phong cảnh</a></li>
-                <li class="dropdown-item"><a routerLink="" class="dropdown-link">Kỷ yếu</a></li>
+                <li class="dropdown-item"><a routerLink="/collection" class="dropdown-link">Chân dung</a></li>
+                <li class="dropdown-item"><a routerLink="/collection" class="dropdown-link">Thể thao</a></li>
+                <li class="dropdown-item"><a routerLink="/collection" class="dropdown-link">Đường phố</a></li>
+                <li class="dropdown-item"><a routerLink="/collection" class="dropdown-link">Phong cảnh</a></li>
+                <li class="dropdown-item"><a routerLink="/collection" class="dropdown-link">Kỷ yếu</a></li>
             </ul>
         </li>
         <li class="menu-item dropdown">
-            <a routerLink="" class="menu-link">Booking</a>
+            <a routerLink="/collection" class="menu-link">Booking
+                <i class='bx bx-collapse-vertical icon-collapse'></i>
+                <i class='bx bx-expand-vertical icon-expand'></i>
+            </a>
             <ul class="dropdown-menu">
-                <li class="dropdown-item"><a routerLink="" class="dropdown-link">Thời trang</a></li>
-                <li class="dropdown-item"><a routerLink="" class="dropdown-link">Phụ kiện</a></li>
-                <li class="dropdown-item"><a routerLink="" class="dropdown-link">Mỹ phẩm</a></li>
-                <li class="dropdown-item"><a routerLink="" class="dropdown-link">Thực phẩm</a></li>
+                <li class="dropdown-item"><a routerLink="/collection" class="dropdown-link">Thời trang</a></li>
+                <li class="dropdown-item"><a routerLink="/collection" class="dropdown-link">Phụ kiện</a></li>
+                <li class="dropdown-item"><a routerLink="/collection" class="dropdown-link">Mỹ phẩm</a></li>
+                <li class="dropdown-item"><a routerLink="/collection" class="dropdown-link">Thực phẩm</a></li>
             </ul>
         </li>
-        <li class="menu-item"><a routerLink="" class="menu-link">Catalogue</a></li>
-        <li class="menu-item"><a routerLink="" class="menu-link">Khác</a></li>
+        <li class="menu-item"><a routerLink="/collection" class="menu-link">Catalogue</a></li>
+        <li class="menu-item"><a routerLink="/collection" class="menu-link">Khác</a></li>
     </div>
 </div>
