--- a/src/app/components/clients/menu/menu.component.scss
+++ b/src/app/components/clients/menu/menu.component.scss
@@ -14,14 +14,18 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        column-gap: 2rem;
         border: 1px solid var(--color-secondary);
         border-left: 0;
         border-right: 0;
 
         .menu-item {
+            position: relative;
             list-style: none;
             height: 100%;
             display: flex;
+            justify-items: flex-start;
+            column-gap: .75rem;
             align-items: center;
 
             .menu-link {
@@ -30,16 +34,58 @@
                 color: var(--color-text-body);
                 font-weight: bold;
                 font-size: 20px;
-                padding: 0 2rem;
+                /*padding: 0 2rem;*/
                 line-height: 3.25rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                column-gap: 0.5rem;
+
+                .icon-expand,
+                .icon-collapse {
+                    font-size: 16px;
+                    color: var(--color-primary);
+                }
+
+                .icon-expand {
+                    display: none;
+                }
             }
+
         }
 
         .menu-item:hover {
             .menu-link {
                 color: var(--color-primary);
+
+                .icon-expand {
+                    display: block;
+                }
+
+                .icon-collapse {
+                    display: none;
+                }
             }
+
         }
+
+        .menu-item::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 1.5px;
+            background-color: var(--color-primary);
+            bottom: 0;
+            left: 0;
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.3s ease;
+        }
+
+        .menu-item:hover::after {
+            transform: scaleX(1);
+        }
+
     }
 }
 
