--- a/src/app/components/clients/menu/menu.component.html
+++ b/src/app/components/clients/menu/menu.component.html
@@ -14,7 +14,7 @@
             </ul>
         </li>
         <li class="menu-item dropdown">
-            <a routerLink="/collection" class="menu-link">Booking
+            <a routerLink="/collection" class="menu-link">Lookbook
                 <i class='bx bx-collapse-vertical icon-collapse'></i>
                 <i class='bx bx-expand-vertical icon-expand'></i>
             </a>
