--- a/src/app/components/clients/header/header.component.html
+++ b/src/app/components/clients/header/header.component.html
@@ -18,7 +18,10 @@
                         </a>
                     </div>
                     <div *ngIf="toggleSuggest" class="search-suggest">
-
+                        <p>Hà Nội</p>
+                        <p>Hồ Chí Minh</p>
+                        <p>Chân dung</p>
+                        <p>Sự kiện</p>
                     </div>
                 </div>
             </div>
@@ -45,11 +48,10 @@
                     </a>
                 </div>
                 <div *ngIf="toggleSuggestMobile" class="search-suggest-mobile">
-                    <p>hi</p>
-                    <p>hi</p>
-                    <p>hi</p>
-                    <p>hi</p>
-                    <p>hi</p>
+                    <p>Hà Nội</p>
+                    <p>Hồ Chí Minh</p>
+                    <p>Chân dung</p>
+                    <p>Sự kiện</p>
                 </div>
             </div>
         </div>
@@ -69,32 +71,41 @@
                             <i *ngIf="isDropdownVisible" class='bx bx-expand-vertical'></i>
                         </a>
                         <ul class="menu-dropdown" #menuDropdown [ngClass]="{'show': isDropdownVisible}">
-                            <li class="menu-dropdown-item"><a routerLink="" class="menu-dropdown-link">Chân dung</a>
+                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Chân
+                                    dung</a>
                             </li>
-                            <li class="menu-dropdown-item"><a routerLink="" class="menu-dropdown-link">Phong cảnh</a>
+                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Phong
+                                    cảnh</a>
                             </li>
-                            <li class="menu-dropdown-item"><a routerLink="" class="menu-dropdown-link">Đường phố</a>
+                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Đường
+                                    phố</a>
                             </li>
-                            <li class="menu-dropdown-item"><a routerLink="" class="menu-dropdown-link">Thể thao</a></li>
-                            <li class="menu-dropdown-item"><a routerLink="" class="menu-dropdown-link">Kỷ yếu</a></li>
+                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Thể
+                                    thao</a></li>
+                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Kỷ
+                                    yếu</a></li>
                         </ul>
                     </li>
                     <li class="menu-item" [ngClass]="{'active': isDropdown1Visible}" #itemDropdown1>
-                        <a href="javascript:void(0)" class="menu-link" (click)="toggleDropdown1()">Booking
+                        <a href="javascript:void(0)" class="menu-link" (click)="toggleDropdown1()">Lookbook
                             <i *ngIf="!isDropdown1Visible" class='bx bx-collapse-vertical'></i>
                             <i *ngIf="isDropdown1Visible" class='bx bx-expand-vertical'></i>
                         </a>
                         <ul class="menu-dropdown" #menuDropdown1 [ngClass]="{'show': isDropdown1Visible}">
-                            <li class="menu-dropdown-item"><a routerLink="" class="menu-dropdown-link">Thời trang</a>
+                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Thời
+                                    trang</a>
                             </li>
-                            <li class="menu-dropdown-item"><a routerLink="" class="menu-dropdown-link">Phụ kiện</a></li>
-                            <li class="menu-dropdown-item"><a routerLink="" class="menu-dropdown-link">Mỹ phẩm</a></li>
-                            <li class="menu-dropdown-item"><a routerLink="" class="menu-dropdown-link">Thực phẩm</a>
+                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Phụ
+                                    kiện</a></li>
+                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Mỹ
+                                    phẩm</a></li>
+                            <li class="menu-dropdown-item"><a routerLink="/collection" class="menu-dropdown-link">Thực
+                                    phẩm</a>
                             </li>
                         </ul>
                     </li>
-                    <li class="menu-item"><a routerLink="" class="menu-link">Catalogue</a></li>
-                    <li class="menu-item"><a routerLink="" class="menu-link">Khác</a></li>
+                    <li class="menu-item"><a routerLink="/collection" class="menu-link">Catalogue</a></li>
+                    <li class="menu-item"><a routerLink="/collection" class="menu-link">Khác</a></li>
                 </div>
                 <div class="control-mobile">
                     <li class="control-item item-col"><a class="control-link" routerLink="">Cách hoạt động</a></li>
