--- a/src/app/components/clients/profile/profile.component.html
+++ b/src/app/components/clients/profile/profile.component.html
@@ -2,16 +2,41 @@
     <div class="wall-wrapper">
         <div class="wall-content">
             <div class="wall1">
-                <div class="wall1-1"></div>
-                <div class="wall1-2"></div>
+                <div class="wall1-1">
+                    <img src="./assets/images/profile/pf1.jpg" alt="">
+                </div>
+                <div class="wall1-2">
+                    <img src="./assets/images/profile/pf2.jpg" alt="">
+                </div>
             </div>
-            <div class="wall2"></div>
+            <div class="wall2">
+                <img src="./assets/images/profile/pf3.jpg" alt="">
+            </div>
             <div class="wall3">
-                <div class="wall3-1"></div>
-                <div class="wall3-2"></div>
+                <div class="wall3-1">
+                    <img src="./assets/images/profile/pf4.jpg" alt="">
+
+                </div>
+                <div class="wall3-2">
+                    <img src="./assets/images/profile/pf5.jpg" alt="">
+
+                </div>
             </div>
-            <div class="wall4"></div>
-            <div class="wall5"></div>
+            <div class="wall4">
+                <img src="./assets/images/profile/pf6.jpg" alt="">
+
+            </div>
+            <div class="wall5">
+                <div class="wall5-1">
+                    <img src="./assets/images/profile/pf7.jpg" alt="">
+
+                </div>
+                <div class="wall5-2">
+                    <img src="./assets/images/profile/pf8.jpg" alt="">
+
+                </div>
+
+            </div>
         </div>
     </div>
     <div class="content-wrapper">
@@ -116,7 +141,7 @@
                     <div class="portfolio-item">
                         <a routerLink="/collection">
                             <div class="it-header">
-                                <img src="./assets/images/user/Rectangle 24.png" alt="">
+                                <img src="./assets/images/profile/op1.jpg" alt="">
                             </div>
                             <div class="it-footer">
                                 <h3 class="it-cate">LookBook</h3>
@@ -127,7 +152,7 @@
                     <div class="portfolio-item">
                         <a routerLink="/collection">
                             <div class="it-header">
-                                <img src="./assets/images/user/Rectangle 24.png" alt="">
+                                <img src="./assets/images/profile/op2.jpg" alt="">
                             </div>
                             <div class="it-footer">
                                 <h3 class="it-cate">LookBook</h3>
@@ -138,7 +163,7 @@
                     <div class="portfolio-item">
                         <a routerLink="/collection">
                             <div class="it-header">
-                                <img src="./assets/images/user/Rectangle 24.png" alt="">
+                                <img src="./assets/images/profile/op3.jpg" alt="">
                             </div>
                             <div class="it-footer">
                                 <h3 class="it-cate">LookBook</h3>
@@ -149,7 +174,7 @@
                     <div class="portfolio-item">
                         <a routerLink="/collection">
                             <div class="it-header">
-                                <img src="./assets/images/user/Rectangle 24.png" alt="">
+                                <img src="./assets/images/profile/op4.jpg" alt="">
                             </div>
                             <div class="it-footer">
                                 <h3 class="it-cate">LookBook</h3>
