--- a/src/app/components/clients/header/header-content.scss
+++ b/src/app/components/clients/header/header-content.scss
@@ -78,6 +78,7 @@
                 min-height: 250px;
                 border-radius: .5rem;
                 box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+                padding: 20px;
             }
         }
     }
@@ -207,6 +208,7 @@
             width: 100vw;
             height: 100vh;
             background-color: var(--color-light);
+            padding: 20px;
         }
     }
 
